src/objects/DelegatedApprovalMatrix__c.object
<CustomObject>
    <description>To be used to store the delegated approvers</description>
    <fields>
        <fullName>Approver1__c</fullName>
        <label>Approver1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <label>Approver2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <label>Approver3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApproverName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DelegatedApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Delegated Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approver</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delegated Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>